[gd_scene load_steps=53 format=3 uid="uid://cp03yjp62rk53"]

[ext_resource type="Texture2D" uid="uid://c03gklu8p7f2m" path="res://Assets/character/Mushroom/Attack.png" id="1_1sk4l"]
[ext_resource type="Script" path="res://Enemy/moshroomhead.gd" id="1_q2ax3"]
[ext_resource type="Texture2D" uid="uid://d1a28o4rhiqqv" path="res://Assets/character/Mushroom/Take Hit.png" id="2_tx7r7"]
[ext_resource type="Texture2D" uid="uid://byafqyhdngkyd" path="res://Assets/character/Mushroom/Death.png" id="3_6daq7"]
[ext_resource type="Texture2D" uid="uid://cxrlksshy6yna" path="res://Assets/character/Mushroom/Idle.png" id="4_sgihq"]
[ext_resource type="Texture2D" uid="uid://cjpy44aysb4rd" path="res://Assets/character/Mushroom/Run.png" id="5_cmekx"]
[ext_resource type="Texture2D" uid="uid://c5ajo5vy1xj7m" path="res://Assets/decorations/circle.png" id="7_kubux"]
[ext_resource type="PackedScene" uid="uid://cn05ji35m1xp8" path="res://Scene/Damage_box/damage_box.tscn" id="8_rbr2x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nb18k"]
size = Vector2(22, 37)

[sub_resource type="CircleShape2D" id="CircleShape2D_vxlpp"]
radius = 162.0

[sub_resource type="AtlasTexture" id="AtlasTexture_n2lkt"]
atlas = ExtResource("1_1sk4l")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_alwpc"]
atlas = ExtResource("1_1sk4l")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5gcq"]
atlas = ExtResource("1_1sk4l")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_kllkw"]
atlas = ExtResource("1_1sk4l")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_pep0s"]
atlas = ExtResource("1_1sk4l")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_trlxv"]
atlas = ExtResource("1_1sk4l")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_guxnk"]
atlas = ExtResource("1_1sk4l")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pkob"]
atlas = ExtResource("1_1sk4l")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_h45eh"]
atlas = ExtResource("2_tx7r7")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofx0p"]
atlas = ExtResource("2_tx7r7")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0kgq"]
atlas = ExtResource("2_tx7r7")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_uve8m"]
atlas = ExtResource("2_tx7r7")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_x75r2"]
atlas = ExtResource("3_6daq7")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvfwl"]
atlas = ExtResource("3_6daq7")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ks12c"]
atlas = ExtResource("3_6daq7")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mpem"]
atlas = ExtResource("3_6daq7")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjigq"]
atlas = ExtResource("4_sgihq")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_c63rr"]
atlas = ExtResource("4_sgihq")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1uyp"]
atlas = ExtResource("4_sgihq")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ohg5"]
atlas = ExtResource("4_sgihq")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxd86"]
atlas = ExtResource("4_sgihq")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_60ch8"]
atlas = ExtResource("4_sgihq")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpq8k"]
atlas = ExtResource("4_sgihq")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_qiepy"]
atlas = ExtResource("4_sgihq")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qtlm"]
atlas = ExtResource("5_cmekx")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_houxv"]
atlas = ExtResource("5_cmekx")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_8guuw"]
atlas = ExtResource("5_cmekx")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltxbv"]
atlas = ExtResource("5_cmekx")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_bm64i"]
atlas = ExtResource("5_cmekx")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_534mp"]
atlas = ExtResource("5_cmekx")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_4cdre"]
atlas = ExtResource("5_cmekx")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfckw"]
atlas = ExtResource("5_cmekx")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_g5jtd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2lkt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_alwpc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5gcq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kllkw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pep0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trlxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_guxnk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pkob")
}],
"loop": false,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h45eh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofx0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0kgq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uve8m")
}],
"loop": false,
"name": &"Damage",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x75r2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvfwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ks12c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mpem")
}],
"loop": false,
"name": &"Death",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjigq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c63rr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1uyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ohg5")
}],
"loop": true,
"name": &"Idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxd86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60ch8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpq8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qiepy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxd86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60ch8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpq8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qiepy")
}],
"loop": false,
"name": &"Recover",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qtlm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_houxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8guuw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltxbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bm64i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_534mp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4cdre")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfckw")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_egwjl"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Moshroomhead_anim:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Moshroomhead_anim:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Attack"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Attack_area/Damage_box/Hitbox/Hitbox_collision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_k36lb"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Moshroomhead_anim:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Moshroomhead_anim:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Damage"]
}

[sub_resource type="Animation" id="Animation_mkab7"]
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Moshroomhead_anim:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Moshroomhead_anim:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Death"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2, 2.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_w5dls"]
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Moshroomhead_anim:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Moshroomhead_anim:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Idle"]
}

[sub_resource type="Animation" id="Animation_v5qiq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attack_area/Damage_box/Hitbox/Hitbox_collision:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_b1534"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Moshroomhead_anim:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Moshroomhead_anim:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Recover"]
}

[sub_resource type="Animation" id="Animation_1164p"]
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Moshroomhead_anim:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Moshroomhead_anim:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Run"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v4as5"]
_data = {
"Attack": SubResource("Animation_egwjl"),
"Damage": SubResource("Animation_k36lb"),
"Death": SubResource("Animation_mkab7"),
"Idle": SubResource("Animation_w5dls"),
"RESET": SubResource("Animation_v5qiq"),
"Recover": SubResource("Animation_b1534"),
"Run": SubResource("Animation_1164p")
}

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_22teq"]
polygon = PackedVector2Array(-3, 18, -8, 21, 0, 21, 7, 21, 3, 18)

[node name="Moshroomhead" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_q2ax3")

[node name="Moshroomhead_collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_nb18k")

[node name="Agro_zone_Moshroom" type="Area2D" parent="."]

[node name="Agro_collision_moshroom" type="CollisionShape2D" parent="Agro_zone_Moshroom"]
shape = SubResource("CircleShape2D_vxlpp")

[node name="Moshroomhead_anim" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_g5jtd")
animation = &"Attack"
autoplay = "Idle"

[node name="Moshroomhead_anim_player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v4as5")
}
autoplay = "Idle"

[node name="Ambient" type="Node2D" parent="."]

[node name="Shadow" type="LightOccluder2D" parent="Ambient"]
occluder = SubResource("OccluderPolygon2D_22teq")

[node name="Flashlight" type="PointLight2D" parent="Ambient"]
position = Vector2(0, 2.38419e-07)
scale = Vector2(0.0404297, 0.05175)
shadow_enabled = true
texture = ExtResource("7_kubux")
texture_scale = 1.2

[node name="Attack_area" type="Node2D" parent="."]

[node name="Damage_box" parent="Attack_area" instance=ExtResource("8_rbr2x")]

[node name="HurtBox" parent="Attack_area/Damage_box" index="0"]
collision_layer = 32
collision_mask = 0

[node name="Hitbox" parent="Attack_area/Damage_box" index="1"]
collision_layer = 0
collision_mask = 16

[node name="Run_speed" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="Agro_zone_Moshroom" to="." method="_on_agro_zone_moshroom_body_entered"]
[connection signal="body_exited" from="Agro_zone_Moshroom" to="." method="_on_agro_zone_moshroom_body_exited"]
[connection signal="body_entered" from="Attack_area/Damage_box/HurtBox" to="." method="_on_hurt_box_body_entered"]
[connection signal="body_exited" from="Attack_area/Damage_box/HurtBox" to="." method="_on_hurt_box_body_exited"]
[connection signal="area_entered" from="Attack_area/Damage_box/Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="Run_speed" to="." method="_on_run_speed_timeout"]

[editable path="Attack_area/Damage_box"]
